[package]
name = "eureka"
version = "0.1.0"
edition = "2021"
description = "A production-ready search engine with object store persistence"
authors = ["Developer <developer@example.com>"]

[dependencies]
tantivy = "0.22.0"
object_store = { version = "0.12.0", features = ["aws", "gcp", "azure"] }
tokio = { version = "1.44.1", features = ["full"] }
futures = "0.3.31"
tempfile = "3.10.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
clap = { version = "4.4.11", features = ["derive", "env"] }
axum = "0.7.4"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace"] }
http = "1.0.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
anyhow = "1.0.97"
etcd-client = "0.11.0"
chrono = { version = "0.4.34", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["json"] }
urlencoding = "2.1.3"
rand = "0.9.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
